<resources>
    <string name="app_name">LSUTrition</string>

    <string name="user_history_label">Order History</string>
    <string name="user_trends_label">Your Eating Habits</string>
    <string name="deals_display_label">Fresh Deals</string>
    <string name="order_display_label">Current Order</string>

    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="restaurant_owner">Restaurant Owner</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="menu_view_order">View Current Order</string>
    <string name="menu_order_checkout">Finish Order</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="add_to_order">Add Item to Order</string>
    <string name="add_to_order_finish"> Add Item and Finish Order</string>
    <string name="finish_order_text">Finish Order</string>
    <string name="view_order_items">Your Current Order Contains:</string>
    <string name="total_calorie_display_text">Your Order\'s Total Calorie Count:</string>


</resources>
