<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_black_24dp"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/action_restaurant_owner"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/restaurant_owner"/>
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/menu_sign_out"/>

</menu>