<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="csc4330.lsutrition.Finish_Order_Activity"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/order_top_display_frame">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_order_items"
            android:layout_gravity="center_vertical|center_horizontal"
            style="@style/information_text_theme_Large"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/order_RV_FrameLayout"
        app:layout_constraintTop_toBottomOf="@id/order_top_display_frame">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order_item_display_RV"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/order_RV_FrameLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/total_calorie_display_text"
            style="@style/information_text_theme_Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:id="@+id/order_total_calories"
            style="@style/information_text_theme_Medium"/>
    </FrameLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:text="@string/finish_order_text"
        android:background="@color/colorAccent"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="finishOrder"/>
</android.support.constraint.ConstraintLayout>
